[project]
name = "mcp-vincario"
version = "0.1.0"
description = "FastMCP server to access the Vincario API v3.2 for VIN decoding, stolen vehicle checks and market value estimation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.19.0",
]
